@@ -1,6 +1,7 @@
 - drakx-in-chroot:
   o enable to choose resolution of Xvfb
   o enable to use a package repository different from installer one
+- use new style popup button for help
 
 Version 11.15 - 19 August 2008
 
